# lol-manifest-tool

./: README.md  pyproject.toml  requirements.txt
lol_manifest/: __init__.py  manifest.py  tools.py
