[tool.poetry]
name = "lol-manifest-tool"
version = "0.0.1"
readme = "README.md"
license = 'GPL-3.0-only'
authors = ["Virace <Virace@aliyun.com>"]
description = "获取英雄联盟最新文件清单文件、清单文件解析、清单文件对比，基于https://github.com/CommunityDragon/CDTB修改而来"
homepage = "https://github.com/Virace/lol-manifest-tool"
repository = "https://github.com/Virace/lol-manifest-tool"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
include = [
    "LICENSE",
    "requirements.txt"
]
packages = [{ include = "lol_manifest" }]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Virace/lol-manifest-tool/issues"

[tool.poetry.dependencies]
python = "^3.10"
zstd = "^1.5.2.5"
requests = "^2.28.1"
loguru = "^0.6.0"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
